# visionx-home-security-system

./: .gitignore  README.md  docker-compose.yaml
.claude/: settings.local.json
backend/: .env.example  camera_setup.ps1  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 694f237fcbf8_add_camera_main_and_sub_rtsp_urls.py  aca8f818d480_added_rtsp_sub_url_to_camera_model.py  eb5257c4b45e_create_initial_tables.py
backend/src/: database.py
backend/src/config/: config.py
backend/src/dependencies/: auth.py
backend/src/models/: __init__.py  camera.py  camera_health_check.py  event.py  recording.py  snapshot.py  user.py
backend/src/routers/: auth.py  cameras.py  users.py
backend/src/schemas/: auth.py  camera.py  users.py
backend/src/services/: auth_services.py  camera_service.py  go2rtc_service.py  stream_key_service.py
docker/go2rtc/: go2rtc.yaml  go2rtc.yaml.example
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css  router.jsx
frontend/src/api/: authAPI.js  cameraAPI.js  healthAPI.js  https.js  userAPI.js
frontend/src/components/auths/: AuthLayout.jsx  AuthTabs.jsx  LoginForm.jsx  SignupForm.jsx
frontend/src/components/cameraDetail/: CameraPlayer.jsx  EventsCard.jsx  (+3 more)
frontend/src/hooks/: useCameraDelete.js
frontend/src/layouts/: AppShell.jsx
frontend/src/pages/: AddCameraPage.jsx  CameraDetailPage.jsx  CamerasPage.jsx  DashboardPage.jsx  EditCameraPage.jsx  ForgotPasswordPage.jsx  HealthPage.jsx  LoginPage.jsx  RecordingsPage.jsx  SettingsPage.jsx  SignupPage.jsx
(+9 files in other folders)
