[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
    "opencv-python>=5.0.0.93",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]
